@@ -24885,11 +24885,7 @@ void menu_about_running_info(MENU_ITEM_PARAMETERS)
         }
         string_audio_drivers[i]=0;
 
-				char configfile[PATH_MAX];
 
-				if (util_get_configfile_name(configfile)==0)  {
-					sprintf(configfile,"Unknown");
-				}
 
 				int uptime_seconds=timer_get_uptime_seconds();
 
@@ -24943,7 +24939,6 @@ void menu_about_running_info(MENU_ITEM_PARAMETERS)
 		"Executable path: %s\n\n"
 #endif
 
-		"Configuration file: %s\n\n"
 		"Start time: %s\n"
 		"Uptime %d secs (%d mins)\n"
 		"%s"
@@ -24956,7 +24951,7 @@ void menu_about_running_info(MENU_ITEM_PARAMETERS)
 		macos_path_to_executable,
 #endif
 
-		configfile,hora_inicio,
+		hora_inicio,
 		uptime_seconds,uptime_seconds/60,mensaje_total_uptime,mensaje_cpu_usage);
 
 	//Average CPU use solo sale si screen_show_cpu_usage.v
